--- a/README
+++ b/README
@@ -68,7 +68,7 @@ instructions; also have a look at the example files.
 
 == CHANGES ==
 
-* V. 1.11 (forthcoming): - Allow for customization of program and presentaion lists.
+* V. 1.11 (forthcoming): - Allow for customization of program and presentation lists.
                          - Correctly set first session in presentation list. 
 
 * V. 1.10 (2020-04-30):  - Do not increment session topic counter for cancelled sessions
