--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -87,7 +87,7 @@ colorlinks=false
 \author{Jürgen Spitzmüller%
 \thanks{Please report issues via \protect\url{https://github.com/jspitz/jslectureplanner}.}}
 
-\date{Version 1.11dev, 2020/04/30}
+\date{Version 1.11, 2020/05/11}
 
 \maketitle
 
@@ -1427,7 +1427,7 @@ the \jslp\ style files. Thanks, Dominik.
 \section{Release History}
 
 \begin{itemize}
-\item forthcoming (v. 1.11):
+\item 2020/05/11 (v. 1.11):
 	\begin{itemize}
 		\item Allow for customization of program and presentation lists (see sec.~\ref{sec:listcust}).
 		\item Correctly set first session in presentation list.
