jsmembertable: use legacy keyvals rather than xkeyval

--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -1239,7 +1239,6 @@ The following packages are required and loaded by \jsmt:
  \item \textsf{calc}
  \item \textsf{longtable}
  \item \textsf{hhline}
- \item \textsf{xkeyval}
 \end{itemize}
 \jsmt\ can be used independently of
 \jslp\ to some degree. The latter package is only required for specific
@@ -1439,6 +1438,10 @@ the \jslp\ style files. Thanks, Dominik.
 \section{Release History}
 
 \begin{itemize}
+\item Forthcoming (v. 1.13):
+\begin{itemize}
+	\item jsmembertable: use legacy keyvals rather than \textsf{xkeyval}.
+\end{itemize}
 \item 2020/12/08 (v. 1.12):
 	\begin{itemize}
 		\item Correctly parse staryear/endyear.
