--- a/README
+++ b/README
@@ -68,6 +68,8 @@ instructions; also have a look at the example files.
 
 == CHANGES ==
 
+* V. 1.23 (forthcoming): - jsmembertable: use legacy keyvals rather than xkeyval.
+
 * V. 1.12 (2020-12-08):  - Correctly parse staryear/endyear.
 
 * V. 1.11 (2020-05-11):  - Allow for customization of program and presentation lists.
