Set dev version

--- a/jsmembertable.sty
+++ b/jsmembertable.sty
@@ -24,8 +24,8 @@
 %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\def\filedate{2020/12/08}
-\def\fileversion{1.12}
+\def\filedate{2022/10/05}
+\def\fileversion{1.13dev}
 \def\filename{jsmembertable.sty}
 
 \NeedsTeXFormat{LaTeX2e}
