--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -87,7 +87,7 @@ colorlinks=false
 \author{Jürgen Spitzmüller%
 \thanks{Please report issues via \protect\url{https://github.com/jspitz/jslectureplanner}.}}
 
-\date{Version 1.12, 2020/12/08}
+\date{Version 1.13dev, 2022/10/05}
 
 \maketitle
 
